force-app/main/default/objects/SLA__c/SLA__c.object-meta.xml
<CustomObject>
    <description>Regra SLA</description>
    <label>SLA</label>
    <nameField>
        <label>Regra SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>