force-app/main/default/objects/SLA__c/fields/Feriados__c.field-meta.xml
<CustomField>
    <fullName>Feriados__c</fullName>
    <label>Feriados</label>
    <type>TextArea</type>
</CustomField>