force-app/main/default/objects/SLA__c/fields/Horario_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Horario_Comercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Horario_Comercial</label>
    <type>Checkbox</type>
</CustomField>