force-app/main/default/objects/SLA__c/fields/Tempo_Resposta_h__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Resposta_h__c</fullName>
    <label>Tempo_Resposta_h</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>